--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <header>
         <nav class ="quiz-nav"> 
             <ul>
-                <li><a href="#high-score">View Highscores</a></li>
+                <li class="left-nav"><a href="#high-score">View Highscores</a></li>
             </ul>
 
-            <div class ="timer-text">
-                <h1>Time: </h1>
-                <div class="timer-count">60</div>
-            </div>
+            <ul>
+                <li>Time:</li>
+                <li class="timer-count">60</li>
+            </ul>
+            
         </nav>
       </header>
 
@@ -38,16 +39,16 @@
       <div id="question">Question</div>
 
       <!-- Option A in multiple choice -->
-      <button class="question-choice" id="A">A</button>
+      <div class="question-choice" id="A">A</div>
 
        <!-- Option B in multiple choice -->
-       <button class="question-choice" id="B">B</button>
+       <div class="question-choice" id="B">B</div>
 
        <!-- Option C in multiple choice -->
-       <button class="question-choice" id="C">C</button>
+       <div class="question-choice" id="C">C</div>
 
        <!-- Option D in multiple choice -->
-       <button class="question-choice" id="D">D</button>
+       <div class="question-choice" id="D">D</div>
 
       </section>
       <!--Section form to add your initials which will be put on the Highscores page-->
