Adding updates to main page and highscores page, CSS and JS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class ="quiz-nav"> 
             <ul>
-                <li class="left-nav"><a href="#high-score">View Highscores</a></li>
+                <li class="left-nav"><a href="scores.html">View Highscores</a></li>
             </ul>
 
             <ul>
@@ -58,7 +58,7 @@
             <p id = "score-msg"></p>
             <input type="text" id="initials" name="initials">
             <button id = "user-score-submit">Submit</button>
-            <button>View HighScores</button>
+            <button><a href="scores.html">View HighScores</a></button>
         </form>
       </section>
       
