Adding updates for quiz page and high scores page functionality and CSS

--- a/scores.html
+++ b/scores.html
@@ -13,21 +13,24 @@
         <!--Navigation header for HighScores page-->
         <nav class="quiz-nav">
             <ul>
-                <li class="left-nav">High Scores</li>
+                <li><a href="index.html">Home</a></li>
+
             </ul>
 
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li class="left-nav"><a>High Scores</a></li>
             </ul>
 
         </nav>
     </header>
-   
+
     <!--Section where High Scores will be printed to the screen for viewing-->
     <section class="score-board">
-        <ul class="score-list">
+        <nav>
+            <ul class="score-list">
 
-        </ul>
+            </ul>
+        </nav>
     </section>
 
     <script src="assets/js/scores.js"></script>
