Adding updates to CSS fixing high scores listings and HTML

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <p>Welcome to the Code Quiz! Try to answer the following questions before the time runs out! Select the answer that
       you believe
-      is the correct one, every incorrect answer will reduce the timer by 10 seconds! Best of luck! Click 'Start' when
+      is the correct one, every incorrect answer will reduce the timer by 10 seconds! Best of luck! <br> Click 'Start' when
       you are
       ready to begin.
     </p>
@@ -64,6 +64,10 @@
       <button><a href="scores.html" id="highscore-button">View HighScores</a></button>
     </form>
   </section>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&family=Josefin+Sans:ital@1&display=swap" rel="stylesheet">
 
   <script src="assets/js/script.js"></script>
 </body>
