--- a/scores.html
+++ b/scores.html
@@ -17,15 +17,12 @@
 
             </ul>
 
-            <ul>
-                <li class="left-nav"><a>High Scores</a></li>
-            </ul>
-
         </nav>
     </header>
 
     <!--Section where High Scores will be printed to the screen for viewing-->
     <section class="score-board">
+        <h1>High Scores</h1>
         <nav>
             <ul class="score-list">
 
