Adding questions to quiz, css, and functions updates

--- a/scores.html
+++ b/scores.html
@@ -29,6 +29,11 @@
             </ul>
         </nav>
     </section>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Josefin+Sans:ital@1&display=swap"
+        rel="stylesheet">
 
     <script src="assets/js/scores.js"></script>
 </body>
