--- a/scores.html
+++ b/scores.html
@@ -5,7 +5,8 @@
     <title>Code Quiz HighScores</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="assets/css/scores.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/scores.css" />
 </head>
 
 <body>
